# yutu

./: .bazelignore  .bazelrc  .gitignore  .goreleaser.yaml  AGENTS.md  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  MODULE.bazel  README.md  README_zh.md  features.md  glama.json  go.mod  go.sum  main.go  server.json
cmd/: AGENTS.md  BUILD.bazel  agent.go  auth.go  channel.go  constants.go  flags.go  flags_test.go  handler.go  mcp.go  root.go  version.go  video.go
cmd/abuseReport/: BUILD.bazel  abuseReport.go  insert.go
cmd/activity/: BUILD.bazel  activity.go  list.go  list_test.go
cmd/agent/: BUILD.bazel  INSTRUCTION.md  INSTRUCTION_DESTROYER.md  INSTRUCTION_MODIFIER.md  INSTRUCTION_ORCHESTRATOR.md  INSTRUCTION_RETRIEVAL.md  agent.go  agents.go  commandline-syntax.md  console.go  web.go
cmd/caption/: BUILD.bazel  caption.go  delete.go  download.go  insert.go  list.go  update.go
cmd/channel/: BUILD.bazel  channel.go  list.go  list_test.go  update.go  update_test.go
cmd/channelBanner/: BUILD.bazel  channelBanner.go  insert.go
cmd/channelSection/: BUILD.bazel  channelSection.go  delete.go  list.go
cmd/comment/: BUILD.bazel  comment.go  delete.go  insert.go  list.go  markAsSpam.go  setModerationStatus.go  update.go
cmd/commentThread/: BUILD.bazel  commentThread.go  insert.go  list.go
cmd/i18nLanguage/: BUILD.bazel  i18nLanguage.go  list.go
cmd/i18nRegion/: BUILD.bazel  i18nRegion.go  list.go
cmd/liveBroadcast/: BUILD.bazel  bind.go  delete.go  insert.go  insertCuepoint.go  list.go  liveBroadcast.go  transition.go  update.go
cmd/liveChatBan/: BUILD.bazel  delete.go  insert.go  liveChatBan.go
cmd/liveChatMessage/: BUILD.bazel  delete.go  insert.go  list.go  liveChatMessage.go  transition.go
cmd/liveChatModerator/: BUILD.bazel  delete.go  insert.go  list.go  liveChatModerator.go
cmd/liveStream/: BUILD.bazel  delete.go  insert.go  list.go  liveStream.go  update.go
cmd/member/: BUILD.bazel  list.go  member.go
cmd/membershipsLevel/: BUILD.bazel  list.go  membershipsLevel.go
cmd/playlist/: BUILD.bazel  delete.go  insert.go  list.go  playlist.go  update.go
cmd/playlistImage/: BUILD.bazel  delete.go  insert.go  list.go  playlistImage.go  update.go
cmd/playlistItem/: BUILD.bazel  delete.go  insert.go  list.go  playlistItem.go  update.go
cmd/search/: BUILD.bazel  list.go  search.go
cmd/subscription/: BUILD.bazel  delete.go  insert.go  list.go  subscription.go
cmd/superChatEvent/: BUILD.bazel  list.go  superChatEvent.go
cmd/thirdPartyLink/: BUILD.bazel  delete.go  insert.go  list.go  thirdPartyLink.go  update.go
cmd/thumbnail/: BUILD.bazel  set.go  thumbnail.go
cmd/video/: BUILD.bazel  delete.go  getRating.go  insert.go  list.go  rate.go  reportAbuse.go  update.go  video.go
cmd/videoAbuseReportReason/: BUILD.bazel  list.go  videoAbuseReportReason.go
cmd/videoCategory/: BUILD.bazel  list.go  videoCategory.go
cmd/watermark/: BUILD.bazel  set.go  unset.go  watermark.go
cmd/yutu/: yutu.go
pkg/: AGENTS.md  BUILD.bazel  constants.go  fs.go  init.go  init_test.go  interface.go  vars.go
pkg/abuseReport/: BUILD.bazel  abuseReport.go  abuseReport_test.go
pkg/activity/: BUILD.bazel  activity.go  activity_test.go
pkg/auth/: BUILD.bazel  auth.go  auth_test.go  service.go  service_test.go  verifier.go  verifier_test.go
pkg/caption/: BUILD.bazel  caption.go  caption_test.go
pkg/channel/: BUILD.bazel  channel.go  channel_test.go
pkg/channelBanner/: BUILD.bazel  channelBanner.go  channelBanner_test.go
pkg/channelSection/: BUILD.bazel  channelSection.go  channelSection_test.go
pkg/comment/: BUILD.bazel  comment.go  comment_test.go
pkg/commentThread/: BUILD.bazel  commentThread.go  commentThread_test.go
pkg/common/: BUILD.bazel  common.go  common_test.go  testutil.go
pkg/i18nLanguage/: BUILD.bazel  i18nLanguage.go  i18nLanguage_test.go
pkg/i18nRegion/: BUILD.bazel  i18nRegion.go  i18nRegion_test.go
pkg/liveBroadcast/: BUILD.bazel  liveBroadcast.go  liveBroadcast_test.go
pkg/liveChatBan/: BUILD.bazel  liveChatBan.go  liveChatBan_test.go
pkg/liveChatMessage/: BUILD.bazel  liveChatMessage.go  liveChatMessage_test.go
pkg/liveChatModerator/: BUILD.bazel  liveChatModerator.go  liveChatModerator_test.go
pkg/liveStream/: BUILD.bazel  liveStream.go  liveStream_test.go
pkg/member/: BUILD.bazel  member.go  member_test.go
pkg/membershipsLevel/: BUILD.bazel  membershipsLevel.go  membershipsLevel_test.go
pkg/playlist/: BUILD.bazel  playlist.go  playlist_test.go
pkg/playlistImage/: BUILD.bazel  playlistImage.go  playlistImage_test.go
pkg/playlistItem/: BUILD.bazel  playlistItem.go  playlistItem_test.go
pkg/search/: BUILD.bazel  search.go  search_test.go
pkg/subscription/: BUILD.bazel  subscription.go  subscription_test.go
pkg/superChatEvent/: BUILD.bazel  superChatEvent.go  superChatEvent_test.go
pkg/thirdPartyLink/: BUILD.bazel  thirdPartyLink.go  thirdPartyLink_test.go
pkg/thumbnail/: BUILD.bazel  thumbnail.go  thumbnail_test.go
pkg/util/: util.go
pkg/utils/: BUILD.bazel  utils.go  utils_test.go
pkg/video/: BUILD.bazel  video.go  video_test.go
pkg/videoAbuseReportReason/: BUILD.bazel  videoAbuseReportReason.go  videoAbuseReportReason_test.go
pkg/videoCategory/: BUILD.bazel  videoCategory.go  videoCategory_test.go
pkg/watermark/: BUILD.bazel  watermark.go  watermark_test.go
pkg/you2be/: channel.go  video.go
pkg/yutuber/: activity.go  channel.go  channelBanner.go  i18nLanguage.go  i18nRegion.go  member.go  membershipsLevel.go  playlist.go  playlistItem.go  search.go  service.go  subscription.go  video.go  videoAbuseReportReason.go  videoCategory.go
pkg/yutuber/activity/: activity.go  activity_test.go
pkg/yutuber/caption/: caption.go  caption_test.go
pkg/yutuber/channel/: channel.go  channel_test.go
pkg/yutuber/channelBanner/: channelBanner.go  channelBanner_test.go
pkg/yutuber/channelSection/: channelSection.go  channelSection_test.go
pkg/yutuber/comment/: comment.go  comment_test.go
pkg/yutuber/commentThread/: commentThread.go
pkg/yutuber/video/: video.go  (+1 more)
(+298 files in other folders)
