load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "TOOLS_NOGO", "go_binary", "go_cross_binary", "go_library", "nogo")

gazelle(name = "gazelle")

nogo(
    name = "yutu_nogo",
    vet = True,
    visibility = ["//visibility:public"],
    #    deps = TOOLS_NOGO,
)

go_library(
    name = "yutu_lib",
    srcs = ["main.go"],
    importpath = "github.com/eat-pray-ai/yutu",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
        "//cmd/activity",
        "//cmd/caption",
        "//cmd/channel",
        "//cmd/channelBanner",
        "//cmd/channelSection",
        "//cmd/comment",
        "//cmd/commentThread",
        "//cmd/i18nLanguage",
        "//cmd/i18nRegion",
        "//cmd/member",
        "//cmd/membershipsLevel",
        "//cmd/playlist",
        "//cmd/playlistImage",
        "//cmd/playlistItem",
        "//cmd/search",
        "//cmd/subscription",
        "//cmd/superChatEvent",
        "//cmd/thumbnail",
        "//cmd/video",
        "//cmd/videoAbuseReportReason",
        "//cmd/videoCategory",
        "//cmd/watermark",
    ],
)

go_binary(
    name = "yutu",
    embed = [":yutu_lib"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "yutu-darwin-amd64",
    platform = "@rules_go//go/toolchain:darwin_amd64",
    target = "yutu",
)

go_cross_binary(
    name = "yutu-darwin-arm64",
    platform = "@rules_go//go/toolchain:darwin_arm64",
    target = "yutu",
)

go_cross_binary(
    name = "yutu-linux-amd64",
    platform = "@rules_go//go/toolchain:linux_amd64",
    target = "yutu",
)

go_cross_binary(
    name = "yutu-linux-arm64",
    platform = "@rules_go//go/toolchain:linux_arm64",
    target = "yutu",
)

go_cross_binary(
    name = "yutu-windows-amd64.exe",
    platform = "@rules_go//go/toolchain:windows_amd64",
    target = "yutu",
)

go_cross_binary(
    name = "yutu-windows-arm64.exe",
    platform = "@rules_go//go/toolchain:windows_arm64",
    target = "yutu",
)
