"""Module dependencies for the yutu project."""

bazel_dep(name = "rules_go", version = "0.54.1")
bazel_dep(name = "gazelle", version = "0.43.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_savioxavier_termlink",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "in_gopkg_yaml_v3",
    "org_golang_google_api",
    "org_golang_x_oauth2",
)
