load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "activity",
    srcs = [
        "activity.go",
        "list.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/activity",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg",
        "//pkg/activity",
        "//pkg/utils",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
