load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "channel",
    srcs = [
        "channel.go",
        "list.go",
        "update.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/channel",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg",
        "//pkg/channel",
        "//pkg/utils",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
    ],
)
