load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "channel",
    srcs = [
        "channel.go",
        "list.go",
        "update.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/channel",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg",
        "//pkg/channel",
        "//pkg/utils",
        "@com_github_eat_pray_ai_cobra_mcp//:cobra-mcp",
        "@com_github_google_jsonschema_go//jsonschema",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
    ],
)
