load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "commentThread",
    srcs = [
        "commentThread.go",
        "insert.go",
        "list.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/commentThread",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg/commentThread",
        "@com_github_spf13_cobra//:cobra",
    ],
)
