load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "i18nLanguage",
    srcs = [
        "i18nLanguage.go",
        "list.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/i18nLanguage",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg",
        "//pkg/i18nLanguage",
        "//pkg/utils",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
