load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "i18nRegion",
    srcs = [
        "i18nRegion.go",
        "list.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/i18nRegion",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg/i18nRegion",
        "@com_github_spf13_cobra//:cobra",
    ],
)
