load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "i18nRegion",
    srcs = [
        "i18nRegion.go",
        "list.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/i18nRegion",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg/i18nRegion",
        "//pkg/utils",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
