load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "playlist",
    srcs = [
        "delete.go",
        "insert.go",
        "list.go",
        "playlist.go",
        "update.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/playlist",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg",
        "//pkg/playlist",
        "//pkg/utils",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
