load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "playlistImage",
    srcs = [
        "delete.go",
        "insert.go",
        "list.go",
        "playlistImage.go",
        "update.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/playlistImage",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg",
        "//pkg/playlistImage",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
