load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "playlistItem",
    srcs = [
        "delete.go",
        "insert.go",
        "list.go",
        "playlistItem.go",
        "update.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/playlistItem",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg",
        "//pkg/playlistItem",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
