load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "search",
    srcs = [
        "list.go",
        "search.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/search",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg/search",
        "//pkg/utils",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
