load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "subscription",
    srcs = [
        "delete.go",
        "insert.go",
        "list.go",
        "subscription.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/subscription",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg",
        "//pkg/subscription",
        "//pkg/utils",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
