load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "superChatEvent",
    srcs = [
        "list.go",
        "superChatEvent.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/superChatEvent",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg/superChatEvent",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
