load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "thumbnail",
    srcs = [
        "set.go",
        "thumbnail.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/thumbnail",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg/thumbnail",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
