load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "videoAbuseReportReason",
    srcs = [
        "list.go",
        "videoAbuseReportReason.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/videoAbuseReportReason",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg/videoAbuseReportReason",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
