load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "videoAbuseReportReason",
    srcs = [
        "list.go",
        "videoAbuseReportReason.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/videoAbuseReportReason",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg",
        "//pkg/videoAbuseReportReason",
        "@com_github_google_jsonschema_go//jsonschema",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
