load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "videoCategory",
    srcs = [
        "list.go",
        "videoCategory.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/videoCategory",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg/videoCategory",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
