load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "videoCategory",
    srcs = [
        "list.go",
        "videoCategory.go",
    ],
    importpath = "github.com/eat-pray-ai/yutu/cmd/videoCategory",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//pkg",
        "//pkg/utils",
        "//pkg/videoCategory",
        "@com_github_eat_pray_ai_cobra_mcp//:cobra-mcp",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
