load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "activity",
    srcs = ["activity.go"],
    importpath = "github.com/eat-pray-ai/yutu/pkg/activity",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth",
        "//pkg/utils",
        "@org_golang_google_api//youtube/v3:youtube",
    ],
)

go_test(
    name = "activity_test",
    srcs = ["activity_test.go"],
    embed = [":activity"],
    deps = ["//pkg/utils"],
)
